infra/overlays/dev/gitlab/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitlab-ingress
  namespace: gitlab
  annotations:
    cert-manager.io/cluster-issuer: $(CLUSTER_ISSUER)
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true" 
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - $(GITLAB_HOST)
    secretName: gitlab-tls
  rules:
  - host: $(GITLAB_HOST)
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gitlab
            port:
              number: 80
